# nd901-agentic-ai-with-langchain-and-langgraph-project-2

./: README.md  experiment.ipynb  pyproject.toml
echohome-starter/: 01_db_setup.ipynb  02_rag_setup.ipynb  03_run_and_evaluate.ipynb  README.md  agent.py  tools.py
echohome-starter/data/: energy_data.db
echohome-starter/data/documents/: energy_storage_optimization.txt  hvac_optimization_strategies.txt  renewable_energy_integration.txt  seasonable_energy_management.txt  smart_home_automation_tips.txt
echohome-starter/data/vectorstore/: chroma.sqlite3
