[project]
name = "nd901-agentic-ai-with-langchain-and-langgraph-project-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langchain>=0.3,<0.4",
  "langchain-core>=0.3,<0.4",
  "langchain-openai>=0.2,<0.3",
  "python-dotenv>=1.0",
  "rich>=13",
  "ruff>=0.5",
  "ty>=0.0.1a25",
  "jupyter>=1.0",
  "grandalf>=0.8",
  "langgraph>=1.0.1",
  "tavily>=1.1.0",
  "pandas>=2.3.3",
  "langchain-chroma>=0.2.6",
  "langchain-community>=0.3.31",
  "pypdf>=6.4.0",
  "mlflow>=3.6.0",
  "ragas>=0.3.9",
  "sqlalchemy>=2.0.44",
  "httpx>=0.28.1",
  "chromadb>=1.3.5",
  "numpy>=2.3.5",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "requests>=2.32.5",
  "python-dateutil>=2.9.0.post0",
]
